syntax = "proto3";

package go.micro.srv.discovery.registry;

import "github.com/micro/go-os/discovery/proto/discovery.proto";

service Registry {
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
	rpc Deregister(DeregisterRequest) returns (DeregisterResponse) {}
	rpc GetService(GetServiceRequest) returns (GetServiceResponse) {}	
	rpc ListServices(ListServicesRequest) returns (ListServicesResponse) {}
	rpc Watch(WatchRequest) returns (stream WatchResponse) {}
}

message RegisterRequest {
	go.micro.os.discovery.Service service = 1;
}

message RegisterResponse {
}

message DeregisterRequest {
	go.micro.os.discovery.Service service = 1;
}

message DeregisterResponse {
}

message GetServiceRequest {
	string service = 1;
}

message GetServiceResponse {
	repeated go.micro.os.discovery.Service services = 1;
}

message ListServicesRequest {
}

message ListServicesResponse {
	repeated go.micro.os.discovery.Service services = 1;
}

message WatchRequest {
	string service = 1;
}

message WatchResponse {
	go.micro.os.discovery.Result result = 1;
}
